In vnacal.3, corrected return type of vnacal_input_apply
The vnacal_input_apply function returns only a 0 or -1 status, not a
double complex.

--- a/src/vnacal.3
+++ b/src/vnacal.3
@@ -198,10 +198,8 @@ vnacal_error_fn_t, vnacal_calset_alloc, vnacal_calset_set_frequency_vector, vnac
 .in -4n
 .\"
 .PP
-.BI "double complex vnacal_input_apply(vnacal_input_t *" vip ,
-.in +4n
+.BI "int vnacal_input_apply(vnacal_input_t *" vip ,
 .BI "vnadata_t *" s_parameters );
-.in -4n
 .\"
 .PP
 .BI "double complex vnacal_input_free(vnacal_input_t *" vip );
